@@ -1,10 +1,10 @@
 /**
  * ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
- * System Name       : TIP
+ * System Name       : TIP (Technology Integration Platform)
  * Subsystem         : Data Processing Admin (DPA)
  * Class Name        : DpaGridControllerTest
- * Description       : Unit tests validating the REST endpoints, ensuring correct
- * response formats, and verification of query parameters.
+ * Description       : Unit tests verifying paginated grid search controllers, parameter
+ * validation handoffs, and default Pageable configurations.
  *
  * Primary Developer : Prasad Ravva
  * Creation Date     : June 29, 2026
@@ -12,77 +12,78 @@
  */
 package gov.fdic.tip.dpa.controller;
 
-import gov.fdic.tip.dpa.constants.DpaConstants;
 import gov.fdic.tip.dpa.dto.MainGridRowDto;
 import gov.fdic.tip.dpa.service.DpaManagementService;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.Mockito;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.List;
+import java.util.Collections;
 
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 
-@ExtendWith(MockitoExtension.class)
+@WebMvcTest(DpaGridController.class)
 class DpaGridControllerTest {
 
+    @Autowired
     private MockMvc mockMvc;
 
-    @Mock
+    @MockBean
     private DpaManagementService managementService;
 
-    @InjectMocks
-    private DpaGridController dpaGridController;
-
-    @BeforeEach
-    void setUp() {
-        mockMvc = MockMvcBuilders.standaloneSetup(dpaGridController).build();
-    }
-
     @Test
-    @DisplayName("GET /lookup/descriptions - Success State")
-    void getDescriptionFilterDropdown_ShouldReturnList() throws Exception {
-        List<String> mockDescriptions = List.of("AVE_MTH_USED", "ASSET_VAL_CALC");
-        when(managementService.getDescriptionDropdownValues()).thenAnswer(inv -> mockDescriptions);
-
-        mockMvc.perform(get(DpaConstants.Routes.LOOKUP_DESCRIPTIONS)
-                .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$").value("AVE_MTH_USED"))
-                .andExpect(jsonPath("$").value("ASSET_VAL_CALC"));
-    }
-
-    @Test
-    @DisplayName("GET /grid-search - Valid Parameters Returns Payload")
-    void fetchActiveGrid_WithValidParams_ShouldReturnFilteredRows() throws Exception {
-        MainGridRowDto row = MainGridRowDto.builder()
+    @WithMockUser(authorities = "DPA_VIEW")
+    @DisplayName("Fetch Active Grid - Valid Parameters Returns Paginated Data")
+    void fetchActiveGrid_WithValidParams_ShouldReturnPage() throws Exception {
+        MainGridRowDto rowDto = MainGridRowDto.builder()
                 .lineItem(5250)
-                .fieldName("AVE_MTH_USED")
+                .fieldName("ASSET")
+                .description("Total Assets")
                 .sourceSystem("CALL")
-                .assessmentPeriod("2026Q1")
-                .preCutoffOp(1L)
-                .postCutoffOp(2L)
+                .assessmentPeriod("FZ1 1Q-2026")
                 .build();
 
-        when(managementService.searchMainGrid("AVE_MTH_USED", "CALL")).thenAnswer(inv -> List.of(row));
+        Page<MainGridRowDto> mockPage = new PageImpl<>(Collections.singletonList(rowDto), PageRequest.of(0, 25), 1);
 
-        mockMvc.perform(get(DpaConstants.Routes.GRID_SEARCH)
-                .param("description", "AVE_MTH_USED")
+        Mockito.when(managementService.searchMainGridPaginated(eq("Total Assets"), eq("CALL"), any(Pageable.class)))
+               .thenReturn(mockPage);
+
+        mockMvc.perform(get("/api/v1/data-processing-admin/grid-search")
+                .param("description", "Total Assets")
                 .param("sourceSystem", "CALL")
-                .accept(MediaType.APPLICATION_JSON))
+                .with(csrf())
+                .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.lineItem").value(5250))
-                .andExpect(jsonPath("$.sourceSystem").value("CALL"))
-                .andExpect(jsonPath("$.assessmentPeriod").value("2026Q1"));
+                .andExpect(jsonPath("$.content.lineItem").value(5250))
+                .andExpect(jsonPath("$.content.assessmentPeriod").value("FZ1 1Q-2026"))
+                .andExpect(jsonPath("$.totalElements").value(1));
+    }
+
+    @Test
+    @WithMockUser(authorities = "DPA_VIEW")
+    @DisplayName("Fetch Active Grid - Throws Exception if Parameters are Conflicting or Empty")
+    void fetchActiveGrid_WithEmptyParams_ShouldPropagateError() throws Exception {
+        Mockito.when(managementService.searchMainGridPaginated(null, null, PageRequest.of(0, 25)))
+               .thenThrow(new IllegalArgumentException("Search requires either description or source system."));
+
+        mockMvc.perform(get("/api/v1/data-processing-admin/grid-search")
+                .with(csrf())
+                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isBadRequest());
     }
 }
